MYZ-7147 fix modal close icon z-index

--- a/src/components/modal/z-modal/styles.css
+++ b/src/components/modal/z-modal/styles.css
@@ -86,6 +86,7 @@
   position: absolute;
   top: var(--basex3);
   right: var(--basex3);
+  z-index: 1020;
 }
 
 :host > div > div > main {
